--- a/website/locales/en-US.json
+++ b/website/locales/en-US.json
@@ -1,5 +1,8 @@
 {
-  "message": {
-    "hello": "hello, world"
+  "menu": {
+    "guide": "Guide"
+  },
+  "components": {
+    "button": "Button"
   }
 }
